--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,85 +1,31 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/reference/configuration-reference
 version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#jobs-overview & https://circleci.com/docs/reference/configuration-reference/#jobs
 jobs:
-  run-tests:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/guides/execution-managed/executor-intro/ & https://circleci.com/docs/reference/configuration-reference/#executor-job
     docker:
-      - image: cimg/python:3.10
-    environment:
-      EDGE_DELTA_HTTP_URL: "http://caaecd16-2026-460e-8501-9e6563a1b2cf-http-us-west2-cf.aws.edgedelta.com"
+      # Specify the version you desire here
+      # See: https://circleci.com/developer/images/image/cimg/base
+      - image: cimg/base:current
+
+    # Add steps to the job
+    # See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#steps-overview & https://circleci.com/docs/reference/configuration-reference/#steps
     steps:
+      # Checkout the code as the first step.
       - checkout
-
       - run:
-          name: Install dependencies
-          command: |
-            python -m pip install --upgrade pip
-            pip install pytest
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-      - run:
-          name: Run tests (tests_flaky.py) and generate build.json
-          command: |
-            # run the test suite once
-            pytest tests_flaky.py -q
-            exit_code=$?
-
-            # parse failures from pytest output
-            python - <<'PY'
-import json, os, subprocess, re
-from datetime import datetime
-
-# Run tests with captured output
-proc = subprocess.run(
-    ["pytest", "tests_flaky.py", "-q"],
-    capture_output=True, text=True
-)
-
-status = "passed" if proc.returncode == 0 else "failed"
-
-# Extract failed test names
-failed_tests = []
-if status == "failed":
-    for line in proc.stdout.splitlines():
-        match = re.match(r"FAILED\s+(\S+)", line)
-        if match:
-            failed_tests.append(match.group(1))
-
-payload = {
-    "job": os.getenv("CIRCLE_JOB"),
-    "workflow": os.getenv("CIRCLE_WORKFLOW_ID"),
-    "repo": os.getenv("CIRCLE_PROJECT_REPONAME"),
-    "branch": os.getenv("CIRCLE_BRANCH"),
-    "commit": os.getenv("CIRCLE_SHA1"),
-    "status": status,
-    "failed_tests": failed_tests,
-    "timestamp": datetime.utcnow().isoformat() + "Z"
-}
-
-with open("build.json", "w") as f:
-    json.dump(payload, f)
-
-print("Generated build.json:")
-print(json.dumps(payload, indent=2))
-PY
-
-            # exit CI based on original test status
-            if [ $exit_code -ne 0 ]; then
-              echo "Tests failed"
-            fi
-
-      - run:
-          name: Send build status to Edge Delta
-          command: |
-            if [ -f build.json ]; then
-              echo "Sending build.json to Edge Delta..."
-              curl -sS -X POST "$EDGE_DELTA_HTTP_URL" \
-                -H "Content-Type: application/json" \
-                --data-binary @build.json || true
-            else
-              echo "No build.json found"
-            fi
-
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
 workflows:
-  version: 2
-  test_and_post:
+  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - run-tests
+      - say-hello
