--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 version: 2.1
 
-# Define the jobs we want to run for this project
 jobs:
   build:
     docker:
@@ -8,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: echo "this is the build job"
+
   test:
     docker:
       - image: cimg/python:3.10
@@ -20,25 +20,20 @@ jobs:
           name: Run a simple test
           command: |
             echo "running example test"
-            # simulate a pass/fail toggle
             TEST_STATUS="passed"
             echo $TEST_STATUS > test_status.txt
 
+      # *** The ONLY payload step you need ***
       - run:
-          name: Build JSON payload for Edge Delta
+          name: Test sending a simple event to Edge Delta
           command: |
-            cat > build_payload.py \<< 'EOF'
-      
-      - run:
-          name: Send payload to Edge Delta
-          command: |
-            curl -X POST \
-            -H "Content-Type: application/json" \
-            -d @build_payload.py \
-            "http://caaecd16-2026-460e-8501-9e6563a1b2cf-http-us-west2-cf.aws.edgedelta.com"
+            echo '{"event":"circleci_test","status":"ok","timestamp":"'$(date -u +%FT%TZ)'"}' > test.json
+            cat test.json
+            curl -v -X POST \
+              -H "Content-Type: application/json" \
+              -d @test.json \
+              "$EDGE_DELTA_HTTP_URL"
 
-
-# Orchestrate our job run sequence
 workflows:
   build_and_test:
     jobs:
