Emit structured CI metadata to Edge Delta

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,99 @@
 version: 2.1
 
 jobs:
-  run-tests:
+  build:
+    docker:
+      - image: cimg/base:2023.03
+    steps:
+      - checkout
+      - run: |
+          echo "=== BUILD START ==="
+          echo "Running build step..."
+          echo "Build completed successfully."
+          echo "=== BUILD END ==="
+
+  test:
     docker:
       - image: cimg/python:3.10
     environment:
-      EDGE_DELTA_HTTP_URL: "http://6ebf4e82-073c-426b-9f56-f9b1915c6ab1-http-us-west2-cf.aws.edgedelta.com"
-
+      EDGE_DELTA_HTTP_URL: "<LINK>"
     steps:
       - checkout
 
+      # Install test dependencies (pytest, etc.)
       - run:
-          name: Install dependencies
+          name: Install Test Dependencies
           command: |
-            python3 -m pip install --upgrade pip
-            pip3 install pytest
+            pip install pytest --quiet
 
+      # Run real tests and capture stdout
       - run:
-          name: Run pytest and capture output
+          name: Run Tests and Capture Logs
           command: |
-            # Run tests and capture console output to file for parsing
-            pytest -q --disable-warnings --maxfail=1 > pytest_output.txt 2>&1 || true
-            echo "Saved pytest output to pytest_output.txt"
+            {
+              echo "=== TEST RUN START ==="
+              echo "Running pytest..."
+              python -m pytest -q || true
+              echo "Pytest exited with code $?"
+              echo "=== TEST RUN END ==="
+            } | tee /tmp/circle_logs.txt
 
+      # Generate additional synthetic logs for volume
       - run:
-          name: Build payload
+          name: Generate Additional Pipeline Logs
           command: |
-            python3 scripts/build_payload.py
+            echo "=== SYNTHETIC LOGS START ===" >> /tmp/circle_logs.txt
+            for i in {1..100}; do
+              echo "Synthetic CircleCI log line #$i - status=ok job=demo step=step_$((i % 5))"
+            done >> /tmp/circle_logs.txt
+            echo "=== SYNTHETIC LOGS END ===" >> /tmp/circle_logs.txt
 
+      # Forward every line to Edge Delta
       - run:
-          name: Post to Edge Delta
+          name: Forward All Logs to Edge Delta
           command: |
-            if [ -f build.json ]; then
-              echo "Posting to $EDGE_DELTA_HTTP_URL"
-              curl -v -X POST "$EDGE_DELTA_HTTP_URL" -H "Content-Type: application/json" --data-binary @build.json || true
+            while IFS= read -r line; do
+              json="{\"message\":\"$line\",\"source\":\"circleci\",\"timestamp\":\"$(date -u +%FT%TZ)\"}"
+              echo "$json" | curl -s -X POST \
+                -H "Content-Type: application/json" \
+                --data-binary @- \
+                "$EDGE_DELTA_HTTP_URL/"
+            done < /tmp/circle_logs.txt
+            echo "Done sending logs."
+      - run:
+          name: Emit CI build metadata to Edge Delta
+          when: always
+          command: |
+            # Determine job status
+            if [ "$CIRCLE_JOB_STATUS" = "success" ]; then
+              STATUS="passed"
             else
-              echo "No build.json found"
+              STATUS="failed"
             fi
+
+            # Create structured CI payload
+            cat > build.json <<EOF
+            {
+              "job": "${CIRCLE_JOB}",
+              "repo": "edge-delta-circle-ci-demo",
+              "branch": "${CIRCLE_BRANCH}",
+              "commit": "${CIRCLE_SHA1}",
+              "pr_url": "${CIRCLE_PULL_REQUEST}",
+              "status": "${STATUS}",
+              "failed_tests": ["test_intentional_ci_failure"],
+              "timestamp": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")"
+            }
+            EOF
+
+            # Send to Edge Delta
+            curl -s -X POST "$EDGE_DELTA_HTTP_URL" \
+              -H "Content-Type: application/json" \
+              -d @build.json
+
+
 
 workflows:
   build_and_test:
     jobs:
-      - run-tests
+      - build
+      - test
