--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,9 @@ jobs:
   test:
     docker:
       - image: cimg/python:3.10
-    environment:
-      EDGE_DELTA_HTTP_URL: "<LINK>"
+        environment:
+          EDGE_DELTA_HTTP_URL: https://6ebf4e82-073c-426b-9f56-f9b1915c6ab1-http-us-west2-cf.aws.edgedelta.com
+
     steps:
       - checkout
 
@@ -54,10 +55,11 @@ jobs:
           command: |
             while IFS= read -r line; do
               json="{\"message\":\"$line\",\"source\":\"circleci\",\"timestamp\":\"$(date -u +%FT%TZ)\"}"
+              echo "EDGE_DELTA_HTTP_URL=$EDGE_DELTA_HTTP_URL"
               echo "$json" | curl -s -X POST \
                 -H "Content-Type: application/json" \
                 --data-binary @- \
-                "$EDGE_DELTA_HTTP_URL/"
+                "$EDGE_DELTA_HTTP_URL"
             done < /tmp/circle_logs.txt
             echo "Done sending logs."
       - run:
