--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/base:2023.03
+      - image: cimg/python:3.10.16
     steps:
       - checkout
       - run: |
