Add more canary deploy steps for demo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
       - image: cimg/python:3.10
     environment:
       PYTHONPATH: /home/circleci/project
+      EDGE_DELTA_HTTP_URL: https://6ebf4e82-073c-426b-9f56-f9b1915c6ab1-http-us-west2-cf.aws.edgedelta.com
     steps:
       - checkout
       - run:
@@ -27,8 +28,12 @@ jobs:
             echo "Starting canary deployment..."
             echo '{"canary":"start"}' > canary_event.json
       - run:
+          name: Send Canary Metrics to Edge Delta
+          command: python app/canary_metrics.py
+      - run:
           name: Evaluate Canary Rollout
           command: python app/canary_rollout.py
+
 
 
 
